[package]
name = "ref-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "*"

[profile.release]
opt-level = 3
lto = true

[[bench]]
name = "bench"
harness = false
